--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "email": "posva13@gmail.com"
   },
   "scripts": {
-    "dev": "vitest",
+    "dev": "vitest --ui",
     "prepublishOnly": "pnpm run build",
     "release": "standard-version",
     "test": "pnpm run test:cov && pnpm run test:types",
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@types/node": "^20.10.4",
     "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.1.0",
     "lint-staged": "^15.2.0",
     "pinia": "^2.1.7",
     "prettier": "^3.1.1",
