--- a/playground/package.json
+++ b/playground/package.json
@@ -19,15 +19,19 @@
     "mande": "^2.0.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "water.css": "^2.1.1"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/tsconfig": "^0.5.0",
-    "json-server": "1.0.0-alpha.23",
+    "autoprefixer": "^10.4.17",
+    "json-server": "^0.17.4",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "unplugin-vue-router": "^0.7.0",
     "vite": "^5.0.12",
