--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "scripts": {
     "dev": "vitest --ui",
     "docs": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
     "release": "standard-version",
