--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,72 @@
 {
-	"cSpell.words": [
-		"Colada"
-	]
+  "cSpell.words": [
+    "Colada"
+  ],
+  // Enable the ESlint flat config support
+  "eslint.experimental.useFlatConfig": true,
+  // Disable the default formatter, use eslint instead
+  "prettier.enable": false,
+  "editor.formatOnSave": false,
+  // Auto fix
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "never"
+  },
+  // Silent the stylistic rules in you IDE, but still auto fix them
+  "eslint.rules.customizations": [
+    {
+      "rule": "style/*",
+      "severity": "warn"
+    },
+    {
+      "rule": "format/*",
+      "severity": "warn"
+    },
+    {
+      "rule": "*-indent",
+      "severity": "warn"
+    },
+    {
+      "rule": "*-spacing",
+      "severity": "warn"
+    },
+    {
+      "rule": "*-spaces",
+      "severity": "warn"
+    },
+    {
+      "rule": "*-order",
+      "severity": "warn"
+    },
+    {
+      "rule": "*-dangle",
+      "severity": "warn"
+    },
+    {
+      "rule": "*-newline",
+      "severity": "warn"
+    },
+    {
+      "rule": "*quotes",
+      "severity": "warn"
+    },
+    {
+      "rule": "*semi",
+      "severity": "warn"
+    }
+  ],
+  // Enable eslint for all supported languages
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "vue",
+    "html",
+    "markdown",
+    "json",
+    "jsonc",
+    "yaml",
+    "toml"
+  ]
 }
