--- a/playground/tsconfig.app.json
+++ b/playground/tsconfig.app.json
@@ -1,5 +1,16 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "compilerOptions": {
+    "composite": true,
+    "baseUrl": ".",
+    "rootDir": "..",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@pinia/colada": ["../src/index.ts"]
+    },
+    "types": ["unplugin-vue-router/client"],
+    "noEmit": true
+  },
   "include": [
     "env.d.ts",
     "./typed-router.d.ts",
@@ -7,16 +18,5 @@
     "src/**/*.vue",
     "../src"
   ],
-  "exclude": ["src/**/__tests__/*"],
-  "compilerOptions": {
-    "composite": true,
-    "noEmit": true,
-    "baseUrl": ".",
-    "rootDir": "..",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@pinia/colada": ["../src/index.ts"]
-    },
-    "types": ["unplugin-vue-router/client"]
-  }
+  "exclude": ["src/**/__tests__/*"]
 }
