docs: add API generation

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "dev": "vitest --ui --typecheck",
     "docs": "vitepress dev docs",
     "docs:build": "vitepress build docs",
+    "docs:api:build": "node ./scripts/run-typedoc.js",
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
     "release": "standard-version",
@@ -113,6 +114,8 @@
     "size-limit": "^11.1.1",
     "standard-version": "^9.5.0",
     "tsup": "^8.0.2",
+    "typedoc": "^0.25.12",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "~5.4.2",
     "vitepress": "1.0.0-rc.45",
     "vitest": "^1.4.0",
