--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "scripts": {
     "dev": "vitest --ui --typecheck",
     "docs": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:build": "pnpm run docs:api:build && vitepress build docs",
     "docs:api:build": "node ./scripts/run-typedoc.js",
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
