--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-command = "pnpm run docs:build"
+command = "pnpm run build && pnpm run docs:build"
 ignore = "./scripts/docs-check.sh"
 publish = "docs/.vitepress/dist"
