--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,15 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "baseUrl": ".",
-    "rootDir": ".",
-    "module": "esnext",
-    "moduleResolution": "Bundler",
-    "paths": {
-      "@pinia/colada": ["./src/index.ts"]
-    },
-    "strict": true,
-    "noEmit": true,
-    // TSUP issue https://github.com/egoist/tsup/issues/571
-    // "composite": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "module": "Preserve",
+    "moduleResolution": "Bundler"
   },
-  "include": [
-    "src",
-    "test"
-  ]
+  "references": [
+    {
+      "path": "./tsconfig.pinia-colada.json"
+    }
+    // {
+    //   "path": "./plugins/retry/tsconfig.json"
+    // }
+  ],
+  "files": []
 }
