--- a/package.json
+++ b/package.json
@@ -68,12 +68,13 @@
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
     "release": "standard-version",
-    "test": "pnpm run test:cov && pnpm run test:types",
+    "test": "pnpm run test:cov && pnpm run build && pnpm run build:plugins && pnpm run test:types",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "test:types": "tsc --build ./tsconfig.json",
     "test:cov": "vitest run --coverage",
     "build": "tsup",
+    "build:plugins": "pnpm run --stream --parallel --filter './plugins/*' build",
     "size": "size-limit",
     "prepare": "simple-git-hooks"
   },
