--- a/tsconfig.pinia-colada.json
+++ b/tsconfig.pinia-colada.json
@@ -2,7 +2,12 @@
   "extends": "./tsconfig.common.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "rootDir": "."
+    "rootDir": ".",
+    "paths": {
+      "@pinia/colada": [
+        "./src/index.ts"
+      ]
+    }
   },
   "include": [
     "src/**/*",
