--- a/playground/package.json
+++ b/playground/package.json
@@ -16,6 +16,8 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
     "@pinia/colada": "workspace:*",
+    "@pinia/colada-plugin-debug": "workspace:^",
+    "@pinia/colada-plugin-retry": "workspace:^",
     "@vueuse/core": "^10.11.0",
     "@vueuse/integrations": "^10.11.0",
     "@vueuse/router": "^10.11.0",
