refactor: add release scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pinia/colada",
   "type": "module",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "packageManager": "pnpm@9.6.0",
   "description": "The smart data fetching layer for Pinia",
   "publishConfig": {
@@ -67,13 +67,14 @@
     "docs:api:build": "node ./scripts/run-typedoc.js",
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
-    "release": "standard-version",
+    "release": "node scripts/release.js",
     "test": "pnpm run test:cov && pnpm run build && pnpm run build:plugins && pnpm run test:types",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "test:types": "tsc --build ./tsconfig.json",
     "test:cov": "vitest run --coverage",
     "build": "tsup",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada -r 1",
     "build:plugins": "pnpm run --stream --parallel --filter './plugins/*' build",
     "size": "size-limit",
     "prepare": "simple-git-hooks"
@@ -108,11 +109,19 @@
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/ui": "^2.0.5",
     "@vue/test-utils": "^2.4.6",
+    "chalk": "^5.3.0",
+    "conventional-changelog-cli": "^5.0.0",
+    "enquirer": "^2.4.1",
     "eslint": "^9.8.0",
+    "execa": "^9.3.0",
+    "globby": "^14.0.2",
     "happy-dom": "^14.12.3",
     "lint-staged": "^15.2.8",
+    "minimist": "^1.2.8",
+    "p-series": "^3.0.0",
     "pinia": "^2.2.0",
     "prettier": "^3.3.3",
+    "semver": "^7.6.3",
     "simple-git-hooks": "^2.11.1",
     "size-limit": "^11.1.4",
     "standard-version": "^9.5.0",
