--- a/plugins/debug/package.json
+++ b/plugins/debug/package.json
@@ -55,6 +55,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-debug -r 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
