--- a/plugins/retry/package.json
+++ b/plugins/retry/package.json
@@ -59,6 +59,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-retry -r 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
