chore: release script

--- a/package.json
+++ b/package.json
@@ -67,14 +67,13 @@
     "docs:api:build": "node ./scripts/run-typedoc.js",
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
-    "release": "node scripts/release.mjs",
+    "release": "standard-version",
     "test": "pnpm run test:cov && pnpm run build && pnpm run build:plugins && pnpm run test:types",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "test:types": "tsc --build ./tsconfig.json",
     "test:cov": "vitest run --coverage",
     "build": "tsup",
-    "changelog": "standard-version",
     "build:plugins": "pnpm run --stream --parallel --filter './plugins/*' build",
     "size": "size-limit",
     "prepare": "simple-git-hooks"
