--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
-    "Colada"
+    "Colada",
+    "twoslash"
   ],
   // Enable the ESlint flat config support
   "eslint.experimental.useFlatConfig": true,
