--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -26,3 +26,5 @@ jobs:
       - run: pnpm run lint:fix
 
       - uses: autofix-ci/action@dd55f44df8f7cdb7a6bf74c78677eb8acd40cd0a
+        with:
+          commit-message: 'style: fix lint issues'
