--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ yarn.lock
 .DS_Store
 .pnpm-debug.log
 tsconfig.tsbuildinfo
+tsconfig.*.tsbuildinfo
 tsconfig.vitest-temp.json
 docs/.vitepress/cache
 vite.config.ts.timestamp-*.mjs
