--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,12 @@ jobs:
           cache: pnpm
 
       - run: pnpm install --frozen-lockfile
+      - run: pnpm run build
       - run: pnpm run lint
       - run: pnpm run test
+      - run: pnpm run test:types
       - run: pnpm run size
+      - run: pnpm run build:plugins
       # avoid updating deps that do not build docs
       - run: pnpm run docs:api:build
 
