--- a/plugins/auto-invalidate/package.json
+++ b/plugins/auto-invalidate/package.json
@@ -59,7 +59,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "@pinia/colada": "^0.7.0"
+    "@pinia/colada": "workspace:^"
   },
   "devDependencies": {
     "@pinia/colada": "workspace:^"
