--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,8 @@ jobs:
       - run: pnpm run size
       - run: pnpm run build:plugins
       # avoid updating deps that do not build docs
-      - run: pnpm run docs:api:build
+      # TODO: move to a different job with a different filter
+      - run: pnpm run docs:build
 
       - uses: codecov/codecov-action@v4
         with:
