feat(nuxt): support colada.options

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -15,7 +15,8 @@
   "main": "./dist/module.cjs",
   "types": "./dist/types.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "scripts": {
     "prepack": "nuxt-module-build build",
