--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["github>posva/renovate-config"]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "local>posva/renovate-config"
+  ]
 }
