--- a/playground/package.json
+++ b/playground/package.json
@@ -41,6 +41,7 @@
     "typescript": "~5.6.3",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^5.4.9",
+    "vite-plugin-vue-devtools": "^7.5.4",
     "vue-tsc": "^2.1.6"
   }
 }
