--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "docs:api:build": "node ./scripts/run-typedoc.js",
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
-    "release": "standard-version",
+    "release": "node scripts/release.mjs",
     "test": "pnpm run build && pnpm run test:cov && pnpm run build:plugins && pnpm run test:types",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -109,7 +109,7 @@
     "@vitest/ui": "^2.1.3",
     "@vue/test-utils": "^2.4.6",
     "chalk": "^5.3.0",
-    "conventional-changelog-cli": "^5.0.0",
+    "conventional-changelog-cli": "^4.0.0",
     "enquirer": "^2.4.1",
     "eslint": "^9.12.0",
     "execa": "^9.4.0",
@@ -123,7 +123,6 @@
     "semver": "^7.6.3",
     "simple-git-hooks": "^2.11.1",
     "size-limit": "^11.1.6",
-    "standard-version": "^9.5.0",
     "tsup": "^8.3.0",
     "typedoc": "^0.26.9",
     "typedoc-plugin-markdown": "^4.2.9",
