--- a/plugins/cache-persister/package.json
+++ b/plugins/cache-persister/package.json
@@ -57,7 +57,7 @@
   "scripts": {
     "build": "tsup",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-cache-persister -r 1",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --ui"
   },
   "peerDependencies": {
     "@pinia/colada": "workspace:^"
