--- a/plugins/delay/package.json
+++ b/plugins/delay/package.json
@@ -61,7 +61,7 @@
   "scripts": {
     "build": "tsup",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-delay -r 1",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --ui"
   },
   "peerDependencies": {
     "@pinia/colada": "workspace:^"
