--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.9.2",
     "@pinia/colada": "workspace:*",
+    "@posva/prompts": "^2.4.4",
     "@shikijs/vitepress-twoslash": "^1.23.1",
     "@size-limit/preset-small-lib": "^11.1.6",
     "@types/node": "^22.9.0",
@@ -110,7 +111,6 @@
     "@vue/test-utils": "^2.4.6",
     "chalk": "^5.3.0",
     "conventional-changelog-cli": "^4.1.0",
-    "enquirer": "^2.4.1",
     "eslint": "^9.15.0",
     "execa": "^9.5.1",
     "globby": "^14.0.2",
