ci: branches ignore

--- a/.github/workflows/pkg.pr.new.yml
+++ b/.github/workflows/pkg.pr.new.yml
@@ -3,6 +3,8 @@ name: Publish Any Commit
 on:
   pull_request:
     branches: main
+    branches-ignore:
+      - 'renovate/**'
     paths-ignore:
       - 'docs/**'
       - 'playground/**'
@@ -11,6 +13,8 @@ on:
   push:
     branches:
       - '**'
+    branches-ignore:
+      - 'renovate/**'
     tags:
       - '!**'
     paths-ignore:
