--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -3,14 +3,13 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "Bundler",
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "strict": true,
     "noEmit": true,
     // TSUP issue https://github.com/egoist/tsup/issues/571
     // "composite": true,
     "esModuleInterop": true,
+    "verbatimModuleSyntax": true,
     "skipLibCheck": true
   }
 }
