--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -46,6 +46,7 @@
     "@pinia/colada": "workspace:*",
     "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.15.4",
+    "typescript": "~5.6.0",
     "vue-tsc": "^2.2.0"
   }
 }
