--- a/playground/package.json
+++ b/playground/package.json
@@ -29,6 +29,7 @@
     "water.css": "^2.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.3",
     "@tsconfig/node18": "^18.2.4",
     "@types/node": "^22.12.0",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -36,7 +37,6 @@
     "autoprefixer": "^10.4.20",
     "json-server": "0.17.4",
     "npm-run-all2": "^7.0.2",
-    "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3",
     "typescript": "~5.6.0",
     "unplugin-vue-router": "^0.11.2",
