--- a/package.json
+++ b/package.json
@@ -101,6 +101,9 @@
   "peerDependencies": {
     "pinia": "^2.2.6"
   },
+  "dependencies": {
+    "@vue/devtools-api": "^7.7.1"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
     "@pinia/colada": "workspace:*",
