--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "tsup": "^8.3.6",
     "typedoc": "^0.27.6",
     "typedoc-plugin-markdown": "^4.4.1",
+    "typedoc-vitepress-theme": "^1.1.2",
     "typescript": "~5.6.0",
     "vitepress": "1.6.3",
     "vitest": "^3.0.4",
