--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     }
   ],
   "peerDependencies": {
-    "pinia": "^2.2.6"
+    "pinia": "^2.2.6 || ^3.0.0"
   },
   "dependencies": {
     "@vue/devtools-api": "^7.7.1"
