--- a/scripts/typedoc.tsconfig.json
+++ b/scripts/typedoc.tsconfig.json
@@ -1,9 +1,6 @@
 {
   "include": ["../src/**/*.ts", "../plugins/*/src/**/*.ts"],
-  "exclude": [
-    "**/*.spec.ts",
-    "../playground"
-  ],
+  "exclude": ["**/*.spec.ts", "../playground"],
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": "..",
