fix(warn): avoid repeated queries warn
Close #192

I would like to revisit this in the future because it's still possible
to create scenarios where the values used in some of the options are
attached to an unmounted component and are therefore not reactive
anymore. For the moment, the warning is too frustrating for little
benefit so the docs have been updated instead.

--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -5,6 +5,7 @@
     "moduleResolution": "Bundler",
     "types": ["node"],
     "strict": true,
+    "noUncheckedIndexedAccess": true,
     "noEmit": true,
     // TSUP issue https://github.com/egoist/tsup/issues/571
     // "composite": true,
