--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -40,6 +40,7 @@
     "@nuxt/test-utils": "^3.17.2",
     "@pinia/colada": "workspace:*",
     "@pinia/nuxt": "^0.10.1",
+    "nuxi": "^3.23.0",
     "nuxt": "^3.16.0",
     "typescript": "~5.8.2",
     "vue-tsc": "^2.2.8"
