--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
       - run: pnpm run lint
       - run: pnpm run test
       - run: pnpm run test:types
+      - run: pnpm run codemods:test
       - run: pnpm run size
       - run: pnpm run build:plugins
       # avoid updating deps that do not build docs
