--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "files": [
     "LICENSE",
     "README.md",
+    "codemods/rules",
     "dist"
   ],
   "scripts": {
@@ -68,7 +69,7 @@
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
     "release": "node scripts/release.mjs",
-    "test": "pnpm run build && pnpm run test:cov && pnpm run build:plugins && pnpm run test:types",
+    "test": "pnpm run build && pnpm run test:cov && pnpm run build:plugins && pnpm run test:types && pnpm run codemods:test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "test:types": "tsc --build ./tsconfig.json",
@@ -76,6 +77,7 @@
     "build": "tsup",
     "build:plugins": "pnpm run --stream --parallel --filter './plugins/*' --filter './nuxt' build",
     "size": "size-limit",
+    "codemods:test": "ast-grep test",
     "prepare": "simple-git-hooks"
   },
   "size-limit": [
@@ -118,6 +120,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.10.1",
+    "@ast-grep/cli": "^0.36.1",
     "@pinia/colada": "workspace:*",
     "@posva/prompts": "^2.4.4",
     "@shikijs/vitepress-twoslash": "^3.2.1",
@@ -150,6 +153,11 @@
     "vitepress": "1.6.3",
     "vitest": "^3.0.9",
     "vue": "^3.5.13"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@ast-grep/cli"
+    ]
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
